@@ -18,19 +18,12 @@ around to it some time. If you have any good ideas, please let me know.
 
 Bugs that need fixing before the 0.44 release goes out the door:
 
- - mkfs.minix rev 1.7 completely broke the parser.  Fix it.
  - 'grep foo$ file' doesn't work
  - 'grep *foo file' segfaults
  - ps dirent race bug (need to stat the file before attempting chdir)
-  - I believe that swaponoff may also be also broken (check it).
-  - It used to be that BusyBox tar would happily overwrite existing files on
-      an extraction.  However, as of 0.42, BusyBox tar simply dies as soon as an 
-      existing file is found.
- - Make 'mount -a' work even when /proc isn't mounted (ugly bug).
  - Make 'ln -s /tmp/file .' work the way GNU ln does (i.e. makes a link to 
     /tmp/file in the current directory, rather then trying and failing to create
     a symlink named "." in the current working directory).
- - implement 'ls -R'.
  - "math" should also take input from stdin
  - "more" doesn't accept " " to scroll by one page when BB_FEATURE_USE_TERMIOS
     is not on.
