@@ -60,6 +60,9 @@
 	* "mount" now reports errors from nfsmount() and assumes NFS mount
 	    if ':' is present in the device name - Pavel Roskin
 	* Fixed exit status for killall - Pavel Roskin
+	* Fixed 'swapon -a' and 'swapoff -a', which were broken.
+	* Fixed 'mount -a' so it works as expected.
+	* Implemented 'ls -R' (enabled by enabling BB_FEATURE_LS_RECURSIVE)
 	* More doc updates
 
 
